<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:elevation="4dp"
        android:paddingTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_title"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal"
        android:autofillHints="@string/create_name"
        android:hint="@string/create_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/create_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding ="true"
        android:elevation="4dp"
        android:background="@drawable/dummy"
        android:backgroundTint="@color/cardview_light_background"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/create_finish"
        app:layout_constraintTop_toBottomOf="@id/create_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/create_label_start"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_normal"
                android:text="@string/event_start_time_title"
                app:layout_constraintEnd_toEndOf="@+id/create_start_time"
                app:layout_constraintStart_toStartOf="@+id/create_start_time"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/create_start_date"
                style="@android:style/Widget.Holo.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_normal"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="@+id/create_label_start"
                app:layout_constraintStart_toStartOf="@+id/create_label_start"
                app:layout_constraintTop_toBottomOf="@+id/create_label_start"
                tools:text="24 April 2021" />

            <TimePicker
                android:id="@+id/create_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_start_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/create_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding ="true"
        android:elevation="8dp"
        android:background="@drawable/dummy"
        android:backgroundTint="@color/cardview_light_background"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@id/create_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_name">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
            android:id="@+id/create_label_finish"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_normal"
            android:text="@string/event_finish_time_title"
            app:layout_constraintEnd_toEndOf="@+id/create_finish_time"
            app:layout_constraintStart_toStartOf="@+id/create_finish_time"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/create_finish_date"
            style="@android:style/Widget.Holo.Spinner"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_normal"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintBottom_toTopOf="@+id/create_finish_time"
            app:layout_constraintEnd_toEndOf="@+id/create_finish_time"
            app:layout_constraintStart_toStartOf="@+id/create_finish_time"
            app:layout_constraintTop_toBottomOf="@+id/create_label_finish"
            tools:text="24 April 2021" />

        <TimePicker
            android:id="@+id/create_finish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_finish_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/create_description"
        android:gravity="top|start"
        android:hint="@string/create_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_start" />

    <Button
        android:id="@+id/create_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_200"
        android:text="@string/create_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>